# miner

./: README.md
.github/workflows/: main.yml
miner/: CMakeLists.txt  Makefile  main.c  mempool.c  mempool.h  nonce.c  nonce.h  siggen.c  siggen.h  transactions.c  transactions.h
tests/: example.expected  example.in  test.00.expected  test.00.in  test.01.expected  test.01.in  test.02.expected  test.02.in  test.03.expected  test.03.in  test.04.expected  test.04.in  test.05.expected  test.05.in  test.06.expected  test.06.in  test.07.expected  test.07.in  test.08.expected  test.08.in  test.09.expected  test.09.in  test.10.expected  test.10.in  test.11.expected  test.11.in  test.12.expected  test.12.in  test.13.expected  test.13.in  test.14.expected  test.14.in  test.15.expected  test.15.in  test.16.expected  test.16.in  test.17.expected  test.17.in  test.18.expected  test.18.in  (+4 more)
